organizing the project

--- a/agents/omar.ipynb
+++ b/agents/omar.ipynb
@@ -2,38 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DeepSeek Chatbot (type 'exit' to quit)\n",
-      "\n",
-      "Bot: \n",
-      "\n",
-      "Bot: \n",
-      "\n",
-      "Bot: \n",
-      "\n",
-      "Bot: \n",
-      "\n",
-      "Bot: <think>\n",
-      "\n",
-      "</think>\n",
-      "\n",
-      "Hello! How can I assist you today? 😊\n",
-      "\n",
-      "Bot: <think>\n",
-      "\n",
-      "</think>\n",
-      "\n",
-      "Hi! I don’t have access to personal information like your name. Could you ask something else or provide more details? 😊\n",
-      "\n",
-      "Bot: \n",
-      "\n",
-      "Bot: \n"
+      "DeepSeek Chatbot (type 'exit' to quit)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Client.generate() got an unexpected keyword argument 'temperature'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 33\u001b[0m     \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 18\u001b[0m, in \u001b[0;36mchat\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Generate response\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mollama\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdeepseek-r1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprompt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprompt\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmax_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5000\u001b[39;49m\u001b[43m \u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Print response chunks as they come\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mBot: \u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, flush\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Client.generate() got an unexpected keyword argument 'temperature'"
      ]
     }
    ],
@@ -72,6 +60,43 @@
     "if __name__ == \"__main__\":\n",
     "    chat()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "# Set your Google API key (replace with your actual key)\n",
+    "import os\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCqjq6SqxpWEOBYouBeBDB4Opv2s9EPp94\"\n",
+    "\n",
+    "# Initialize the Gemini Flash model (currently called gemini-1.5-flash in API)\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", temperature=0.7)\n",
+    "\n",
+    "# Create a simple prompt template\n",
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "    \"You are a helpful AI assistant. Answer the following question: {question}\"\n",
+    ")\n",
+    "\n",
+    "# Create a chain\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "# Invoke the chain with a question\n",
+    "response = chain.invoke({\"question\": \"Explain quantum computing in simple terms\"})\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
